# MFVL-data-pipeline

./: .gitignore  README.md  pyproject.toml
logs/: expenses_ingestion_sample.logs  invoices_ingestion_sample.logs  recurring_fee_ingestion_sample.logs
scripts/: config.py  main.py  output_logging.py  supabase_upload.py
scripts/ingestions/: chart_of_accounts.py  expenses_01.py  expenses_02.py  invoices_01.py  recurring_01.py
scripts/models/: chart_of_accounts.py  expenses_01.py  expenses_02.py  invoices_01.py  recurring_01.py
